# rust-sssmc39

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.ci/: general-jobs  test.yml
src/: config.rs  error.rs  field.rs  lib.rs  math.rs  share.rs  util.rs
src/field/: gf256.rs  lagrange.rs  mod.rs  poly.rs
src/math/: gf256.rs  lagrange.rs  poly.rs
src/shamir/: mod.rs  share.rs  splitter.rs  sssmc39_scheme.rs
src/util/: bitpacker.rs  encrypt.rs  hex.rs  mod.rs  rs1024.rs
tests/: ref_vectors.rs
tests/fixtures/gf256/: common.sage
