[package]
name = "sssmc39"
version = "0.1.0"
authors = ["Yeastplume <yeastplume@protonmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
bitvec = "0.10"
failure = "0.1"
failure_derive = "0.1"
rand = "0.6"
digest = "0.8"
hmac = "0.7"
sha2 = "0.8"
ring = "0.14"
pbkdf2 = "0.3"

[dev-dependencies]
quickcheck = "0.4"
flate2 = "0.2"
itertools = "0.7"
