[package]
name = "sssmc39"
version = "0.0.1"
authors = ["Yeastplume <yeastplume@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/yeastplume/rust-sssmc39"
description = "Work-in-Progress of Shamir Secret Sharing for Mnemonic Codes (SLIP-39)"

[dependencies]
lazy_static = "1"
bitvec = "0.10"
failure = "0.1"
failure_derive = "0.1"
rand = "0.6"
hmac = "0.7"
sha2 = "0.8"
ring = { version = "0.14", optional = true }
digest = { version = "0.8", optional = true }
pbkdf2 = { version = "0.3", optional = true, default-features = false }

[features]
#Highly recommended to use the ring version of pbkdf2.
#Do not the rust_crypto version where security is paramount
default = ["ring_pbkdf2"]
ring_pbkdf2 = ["ring", "digest"]
rust_crypto_pbkdf2 = ["pbkdf2"]

[dev-dependencies]
quickcheck = "0.4"
flate2 = "0.2"
itertools = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
